fix: PhotoSwipe: icon on mobile

--- a/EcomB2B/css/photoswipe/default-skin.css
+++ b/EcomB2B/css/photoswipe/default-skin.css
@@ -61,7 +61,7 @@
   .pswp--svg .pswp__button,
   .pswp--svg .pswp__button--arrow--left:before,
   .pswp--svg .pswp__button--arrow--right:before {
-    background-image: url(default-skin.svg); }
+    background-image: url('../art/image_gallery/default-skin.png'); }
   .pswp--svg .pswp__button--arrow--left,
   .pswp--svg .pswp__button--arrow--right {
     background: none; } }
